--- a/app/src/main/res/layout/import_qr_code_activity.xml
+++ b/app/src/main/res/layout/import_qr_code_activity.xml
@@ -1,21 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="100">
+    android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="0dp"
+    <Button
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="100">
+        android:id="@+id/selectImageButton"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="40dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/select_image" />
 
+    <ImageView
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:scaleType="fitXY"
+        android:id="@+id/iv"/>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/import_qr_code"
-            android:layout_centerInParent="true"/>
-
-    </RelativeLayout>
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtView"
+        android:layout_below="@+id/iv"
+        android:layout_marginTop="20dp"
+        android:text="@string/content_of_qr_code"
+        android:textSize="18sp"
+        android:gravity="center"/>
 </LinearLayout>
