--- a/app/src/main/res/layout/scan_qr_code_activity.xml
+++ b/app/src/main/res/layout/scan_qr_code_activity.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,7 +19,7 @@
         android:id="@+id/textView"
         android:layout_below="@+id/camerapreview"
         android:layout_marginTop="20dp"
-        android:text="Focus on QR code"
+        android:text="@string/focus_on_qr_code"
         android:textSize="18sp"
         android:gravity="center"/>
 
